--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -14,51 +14,64 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="page-body">
 
   <header class="main-header">
+
     <div class="header-top">
-      <a class="main-header-logo">
-        <img src="img/logo.svg" alt="Логотип Техномарт" width="107" height="17">
-      </a>
-      <div class="header-navigation">
-        <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
-          <input type="search" name="search" placeholder="Поиск:">
-        </form>
-        <a class="header-bookmark" href="#">Закладки: 0</a>
-        <a class="header-cart" href="#">Корзина: 0</a>
-        <a class="header-order" href="#">Оформить заказ</a>
+      <div class="container">
+
+        <div class="header-navigation">
+          <a class="main-header-logo">
+            <img src="img/logo.svg" alt="Логотип Техномарт" width="107" height="17">
+          </a>
+          <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
+            <input type="search" name="search" placeholder="Поиск:">
+          </form>
+
+          <div class="header-navigation-link">
+            <a class="header-bookmark" href="#">Закладки: 0</a>
+            <a class="header-cart" href="#">Корзина: 0</a>
+            <a class="header-order" href="#">Оформить заказ</a>
+          </div>
+
+        </div>
+
       </div>
     </div>
 
-    <div class="header-section">
-      <p>
-        Интернет-магазин
-        строительных материалов<br>
-        и инструментов для ремонта
-      </p>
-      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <div class="user-navigation">
-        <a href="#">Войти</a>
-        <a href="#">Регистрация</a>
+    <div class="container">
+      <div class="header-section">
+        <p>
+          Интернет-магазин
+          строительных материалов<br>
+          и инструментов для ремонта
+        </p>
+        <div class="header-contact">
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+        </div>
+        <div class="user-navigation">
+          <a href="#">Войти</a>
+          <a href="#">Регистрация</a>
+        </div>
       </div>
-    </div>
 
-    <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li><a>Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
+          <li><a>Главная</a></li>
+          <li><a href="#">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="container">
     <h1 class="visually-hidden">Интернет-магазин инструментов для ремонта, строительных материалов и техники для стройки
     </h1>
 
@@ -265,7 +278,7 @@
       </ul>
     </section>
 
-    <div class="container">
+    <div class="section-wrapper">
       <section class="about-company">
         <h2 class="title">Компания «Техномарт»</h2>
         <p>
@@ -282,7 +295,7 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a class="button" href="#">Подробнее о компании</a>
+        <a class="button about-company-button" href="#">Подробнее о компании</a>
       </section>
 
       <section class="contacts">
@@ -296,63 +309,84 @@
             <img src="img/map.jpg" alt="Карта офиса по адресу ул. Большая Конюшенная, 19" width="300" height="158">
           </a>
         </figure>
-        <button class="button" type="button">Заблудились? Напишите нам!</button>
+        <button class="button contacts-button" type="button">Заблудились? Напишите нам!</button>
       </section>
     </div>
+    </div>
+
   </main>
 
   <footer class="main-footer">
-    <div class="footer-navigation">
-      <div>
-        <img class="footer-logo" src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
-        <ul class="footer-navigation-link">
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </div>
-      <div>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-        </p>
-        <ul class="footer-navigation-link">
-          <li><a class="categories" href="#">Материалы</a></li>
-          <li><a class="categories" href="#">Техника</a></li>
-          <li><a class="categories" href="#">Инструмент</a></li>
-          <li><a class="categories" href="#">Спецпредложения</a></li>
-        </ul>
+    <div class="container">
+
+      <div class="main-footer-wrapper">
+        <div class="footer-contacts">
+          <img class="footer-logo" src="img/logo.svg" alt="Логотип Техномарт" width="137" height="22">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+          </p>
+        </div>
+
+        <div class="footer-navigation">
+          <ul class="footer-navigation-link">
+            <li><a href="#">Компания</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+
+          <ul class="footer-navigation-link">
+            <li><a class="categories" href="#">Материалы</a></li>
+            <li><a class="categories" href="#">Техника</a></li>
+            <li><a class="categories" href="#">Инструмент</a></li>
+            <li><a class="categories" href="#">Спецпредложения</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
-    <div class="footer-copyright">
-      <div>
-        <p>© 2010–2019 Компания «Техномарт»</p>
-        <p>Все права защищены</p>
-      </div>
-      <ul class="footer-social">
-        <li class="footer-social-vk">
-          <a href="#"><span class="visually-hidden">Вконтакте</span></a>
-        </li>
-        <li class="footer-social-fb">
-          <a href="#"><span class="visually-hidden">Фейсбук</span></a>
-        </li>
-        <li class="footer-social-insta">
-          <a href="#"><span class="visually-hidden">Инстаграмм</span></a>
-        </li>
-      </ul>
-      <div>
-        <p>Обратная связь:
-          <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-      </div>
-      <div>
-        <p>Разработано —
-          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-        </p>
+    <div class="footer-wrapper">
+      <div class="container">
+
+        <div class="footer-column">
+          <div class="footer-copyright">
+            <p>© 2010–2019 Компания «Техномарт»</p>
+            <p>Все права защищены</p>
+          </div>
+
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-vk" href="#">
+                <span class="visually-hidden">Вконтакте</span></a>
+            </li>
+            <li class="social-item">
+              <a class="social-fb" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-insta" href="#">
+                <span class="visually-hidden">Инстаграмм</span>
+              </a>
+            </li>
+          </ul>
+
+          <div class="communication">
+            <p>Обратная связь:
+              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+          </div>
+          <div>
+            <p>Разработано —
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
+
   </footer>
 
   <div class="popup-map">
