--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
           <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
         </div>
         <div class="user-navigation">
-          <a href="#">Войти</a>
-          <a href="#">Регистрация</a>
+          <div class="user-login">
+            <a href="#">Войти</a>
+            <a href="#">Регистрация</a>
+          </div>
         </div>
       </div>
 
@@ -71,17 +73,17 @@
     </div>
   </header>
 
-  <main class="container">
+  <main>
     <h1 class="visually-hidden">Интернет-магазин инструментов для ремонта, строительных материалов и техники для стройки
     </h1>
 
-    <section class="categories">
+    <section class="categories container">
       <h2 class="visually-hidden">Категории товаров</h2>
       <ul class="categories-list">
         <li class="categories-item yellow">
-          <span class="label">New</span>
           Материалы
           <a href="#">на любой вкус</a>
+          <span class="label">New</span>
         </li>
         <li class="categories-item blue">
           Инструмент
@@ -94,7 +96,7 @@
       </ul>
     </section>
 
-    <section class="promo">
+    <section class="promo container">
 
       <div class="slider">
         <ul class="slider-list">
@@ -105,44 +107,50 @@
             </div>
             <a class="button slider-button" href="#">Открыть каталог</a>
           </li>
-          <li class="slider-item two">
+          <!-- <li class="slider-item two">
             <div class="slider-text">
               <h2>Дрели</h2>
               <p>Соседям на радость!</p>
             </div>
             <a class="button slider-button" href="#">Открыть каталог</a>
           </li>
-        </ul>
-        <button class="button-left" type="button"><span class="visually-hidden">Влево</span></button>
-        <button class="button-right" type="button"><span class="visually-hidden">Вправо</span></button>
-        <div class="slider-controls-items">
-          <span class="visually-hidden">Первый слайд</span>
-          <span class="visually-hidden">Второй слайд</span>
-        </div>
+        </ul> -->
+          <button class="button-left" type="button"><span class="visually-hidden">Влево</span></button>
+          <button class="button-right" type="button"><span class="visually-hidden">Вправо</span></button>
+          <div class="slider-controls-items">
+            <span class="visually-hidden">Первый слайд</span>
+            <span class="visually-hidden">Второй слайд</span>
+          </div>
       </div>
 
-      <ul class="promo-list">
-        <li class="promo-item green">
-          Скидки 50%
-          <a href="#">На 350 ТОВАРОВ</a>
-        </li>
-        <li class="promo-item yellow">
-          Доставка
-          <a href="#">Бесплатно</a>
-        </li>
-      </ul>
+      <div class="promo-wrapper">
+        <ul class="promo-list">
+          <li class="promo-item green">
+            Скидки 50%
+            <a href="#">На 350 ТОВАРОВ</a>
+          </li>
+          <li class="promo-item yellow">
+            Доставка
+            <a href="#">Бесплатно</a>
+          </li>
+        </ul>
+      </div>
     </section>
 
-    <section class="popular-product">
+    <section class="popular-product container">
       <div class="popular-wrapper">
         <h2 class="popular-title">Популярные товары:</h2>
-        <a class="button" href="#">Все популярные товары</a>
+        <a class="button popular-button" href="#">Все популярные товары</a>
       </div>
 
       <ul class="product-list">
         <li class="product-item">
-          <img src="img/bosch-9000.jpg" alt="Бирюзовый перфоратор с длинным сверлом" width="184" height="164">
-          <h3>Перфоратор BOSCH BFG 9000</h3>
+          <div class="product-img">
+            <img src="img/bosch-9000.jpg" alt="Бирюзовый перфоратор с длинным сверлом" width="184" height="164">
+          </div>
+          <h3 class="product-title">
+            <a href="#">Перфоратор BOSCH BFG 9000</a>
+          </h3>
           <p class="price-old"><span class="visually-hidden">Старая цена</span>32500 Р.</p>
           <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
           <div class="button-item">
@@ -151,43 +159,57 @@
           </div>
         </li>
         <li class="product-item">
-          <span class="label product-label">New</span>
-          <img src="img/bosch-3000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом" width="127" height="112">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <p class="price-new">15500 Р.</p>
+          <div class="product-img">
+            <img src="img/bosch-3000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом" width="127" height="112">
+          </div>
+          <h3 class="product-title">
+            <a href="#">Перфоратор BOSCH BFG 3000</a>
+          </h3>
+          <p class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</p>
+          <p class="price-new"><span class="visually-hidden">Новая цена</span>15500 Р.</p>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
           </div>
+          <span class="label product-label">New</span>
         </li>
         <li class="product-item">
-          <img src="img/bosch-6000.jpg" alt="Бирюзовый перфоратор со сверлом средней длины" width="144" height="128">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
+          <div class="product-img">
+            <img src="img/bosch-6000.jpg" alt="Бирюзовый перфоратор со сверлом средней длины" width="144" height="128">
+          </div>
+          <h3 class="product-title">
+            <a href="#">Перфоратор BOSCH BFG 6000</a>
+          </h3>
           <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
           <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
           </div>
+          <span class="label product-label">New</span>
         </li>
         <li class="product-item">
-          <span class="label product-label">New</span>
-          <img src="img/bosch-2000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом и красной кнопкой"
-            width="127" height="112">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
+          <div class="product-img">
+            <img src="img/bosch-2000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом и красной кнопкой"
+              width="127" height="112">
+          </div>
+          <h3 class="product-title">
+            <a href="#">Перфоратор BOSCH BFG 2000</a>
+          </h3>
           <p class="price-new">12500 Р.</p>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
           </div>
+          <span class="label product-label">New</span>
         </li>
       </ul>
     </section>
 
-    <section class="popular-brand">
+    <section class="popular-brand container">
       <div class="popular-wrapper">
         <h2 class="popular-title">Популярные производители:</h2>
-        <a class="button" href="#">все производители</a>
+        <a class="button popular-button" href="#">все производители</a>
       </div>
 
       <ul class="popular-brand-list">
@@ -235,50 +257,57 @@
     </section>
 
     <section class="services">
-      <h2 class="title">Сервисы</h2>
-      <p>
-        Хороший интернет-магазин отличается от плохого не только ценами!
-        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
-      </p>
+      <div class="container">
 
-      <ul class="services-controls">
-        <li><a class="active" href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Кредит</a></li>
-      </ul>
+        <h2 class="title">Сервисы</h2>
+        <p>
+          Хороший интернет-магазин отличается от плохого не только ценами!
+        </p>
+        <p>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        </p>
 
-      <ul class="services-list">
-        <li class="services-item delivery">
-          <h2 class="services-title">Доставка</h2>
-          <p>
-            Мы с удовольствием доставим ваш товар прямо<br>
-            к вашему подъезду совершенно бесплатно!<br>
-            Ведь мы неплохо заработаем,<br>
-            поднимая его на ваш этаж!
-          </p>
-        </li>
-        <li class="services-item guarantee">
-          <h2 class="services-title">Гарантия</h2>
-          <p>
-            Если купленный у нас товар поломается или заискрит,<br>
-            а также в случае пожара, спровоцированного его возгоранием,
-            вы всегда можете быть уверены в нашей гарантии.
-            Мы обменяем сгоревший товар на новый.<br>
-            Дом уж восстановите как-нибудь сами.
-          </p>
-        </li>
-        <li class="services-item credit">
-          <h2 class="services-title">Кредит</h2>
-          <p>
-            Залезть в долговую яму стало проще!<br>
-            Кредитные консультанты придут вам на помощь.
-          </p>
-          <button class="button" type="button">Отправить заявку</button>
-        </li>
-      </ul>
+        <div class="services-slider">
+          <ul class="services-controls">
+            <li><a class="active" href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Кредит</a></li>
+          </ul>
+
+          <ul class="services-list">
+            <li class="services-item delivery">
+              <h2 class="services-title">Доставка</h2>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо<br>
+                к вашему подъезду совершенно бесплатно!<br>
+                Ведь мы неплохо заработаем,<br>
+                поднимая его на ваш этаж!
+              </p>
+            </li>
+            <li class="services-item guarantee">
+              <h2 class="services-title">Гарантия</h2>
+              <p>
+                Если купленный у нас товар поломается или заискрит,<br>
+                а также в случае пожара, спровоцированного его возгоранием,
+                вы всегда можете быть уверены в нашей гарантии.
+                Мы обменяем сгоревший товар на новый.<br>
+                Дом уж восстановите как-нибудь сами.
+              </p>
+            </li>
+            <li class="services-item credit">
+              <h2 class="services-title">Кредит</h2>
+              <p>
+                Залезть в долговую яму стало проще!<br>
+                Кредитные консультанты придут вам на помощь.
+              </p>
+              <button class="button" type="button">Отправить заявку</button>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
 
-    <div class="section-wrapper">
+    <div class="section-wrapper container">
       <section class="about-company">
         <h2 class="title">Компания «Техномарт»</h2>
         <p>
