--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
 
         <div class="header-navigation">
           <a class="main-header-logo">
-            <img src="img/logo.svg" alt="Логотип Техномарт" width="107" height="17">
+            <img src="img/logo.svg" alt="Логотип Техномарт" width="108" height="17">
           </a>
           <form class="form-search" action="https://echo.htmlacademy.ru" method="get">
             <input type="search" name="search" placeholder="Поиск:">
           </form>
 
-          <div class="header-navigation-link">
-            <a class="header-bookmark" href="#">Закладки: 0</a>
-            <a class="header-cart" href="#">Корзина: 0</a>
-            <a class="header-order" href="#">Оформить заказ</a>
+          <div class="header-link">
+            <div class="header-bookmark">
+              <a href="#">Закладки: 0</a>
+            </div>
+            <div class="header-cart">
+              <a href="#">Корзина: 0</a>
+            </div>
+            <div class="header-order">
+              <a href="#">Оформить заказ</a>
+            </div>
           </div>
-
         </div>
 
       </div>
@@ -53,13 +58,13 @@
         </div>
         <div class="user-navigation">
           <div class="user-login">
-            <a href="#">Войти</a>
-            <a href="#">Регистрация</a>
+            <a class="user-login-link" href="#">Войти</a>
+            <a class="user-login-register" href="#">Регистрация</a>
           </div>
         </div>
       </div>
 
-      <nav class="main-navigation">
+      <nav>
         <ul class="site-navigation">
           <li><a>Главная</a></li>
           <li><a href="#">Компания</a></li>
@@ -77,26 +82,31 @@
     <h1 class="visually-hidden">Интернет-магазин инструментов для ремонта, строительных материалов и техники для стройки
     </h1>
 
-    <section class="categories container">
-      <h2 class="visually-hidden">Категории товаров</h2>
-      <ul class="categories-list">
-        <li class="categories-item yellow">
+    <section class="promo container">
+
+      <ul class="promo-list">
+        <li class="promo-item materials">
           Материалы
           <a href="#">на любой вкус</a>
           <span class="label">New</span>
         </li>
-        <li class="categories-item blue">
+        <li class="promo-item tool">
           Инструмент
           <a href="#">на все случаи</a>
         </li>
-        <li class="categories-item lilac">
+        <li class="promo-item technic">
           Техника
           <a href="#">для стройки</a>
         </li>
+        <li class="promo-item discounts">
+          Скидки 50%
+          <a href="#">На 350 ТОВАРОВ</a>
+        </li>
+        <li class="promo-item delivery">
+          Доставка
+          <a href="#">Бесплатно</a>
+        </li>
       </ul>
-    </section>
-
-    <section class="promo container">
 
       <div class="slider">
         <ul class="slider-list">
@@ -108,32 +118,21 @@
             <a class="button slider-button" href="#">Открыть каталог</a>
           </li>
           <!-- <li class="slider-item two">
-            <div class="slider-text">
-              <h2>Дрели</h2>
-              <p>Соседям на радость!</p>
-            </div>
-            <a class="button slider-button" href="#">Открыть каталог</a>
-          </li>
-        </ul> -->
-          <button class="button-left" type="button"><span class="visually-hidden">Влево</span></button>
-          <button class="button-right" type="button"><span class="visually-hidden">Вправо</span></button>
-          <div class="slider-controls-items">
-            <span class="visually-hidden">Первый слайд</span>
-            <span class="visually-hidden">Второй слайд</span>
-          </div>
-      </div>
-
-      <div class="promo-wrapper">
-        <ul class="promo-list">
-          <li class="promo-item green">
-            Скидки 50%
-            <a href="#">На 350 ТОВАРОВ</a>
-          </li>
-          <li class="promo-item yellow">
-            Доставка
-            <a href="#">Бесплатно</a>
-          </li>
+              <div class="slider-text">
+                <h2>Дрели</h2>
+                <p>Соседям на радость!</p>
+              </div>
+              <a class="button slider-button" href="#">Открыть каталог</a>
+            </li>
+           -->
         </ul>
+
+        <button class="button-left" type="button"><span class="visually-hidden">Влево</span></button>
+        <button class="button-right" type="button"><span class="visually-hidden">Вправо</span></button>
+        <div class="slider-controls-items">
+          <span class="visually-hidden">Первый слайд</span>
+          <span class="visually-hidden">Второй слайд</span>
+        </div>
       </div>
     </section>
 
@@ -151,13 +150,16 @@
           <h3 class="product-title">
             <a href="#">Перфоратор BOSCH BFG 9000</a>
           </h3>
-          <p class="price-old"><span class="visually-hidden">Старая цена</span>32500 Р.</p>
-          <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
+          <div class="price">
+            <p class="price-old"><span class="visually-hidden">Старая цена</span>32500 Р.</p>
+            <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
+          </div>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
           </div>
         </li>
+
         <li class="product-item">
           <div class="product-img">
             <img src="img/bosch-3000.jpg" alt="Бирюзовый перфоратор с тонким коротким сверлом" width="127" height="112">
@@ -165,8 +167,10 @@
           <h3 class="product-title">
             <a href="#">Перфоратор BOSCH BFG 3000</a>
           </h3>
-          <p class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</p>
-          <p class="price-new"><span class="visually-hidden">Новая цена</span>15500 Р.</p>
+          <div class="price">
+            <p class="price-old"><span class="visually-hidden">Старая цена</span>22500 Р.</p>
+            <p class="price-new"><span class="visually-hidden">Новая цена</span>15500 Р.</p>
+          </div>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
@@ -180,8 +184,10 @@
           <h3 class="product-title">
             <a href="#">Перфоратор BOSCH BFG 6000</a>
           </h3>
-          <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
-          <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
+          <div class="price">
+            <p class="price-old"><span class="visually-hidden">Старая цена</span>30500 Р.</p>
+            <p class="price-new"><span class="visually-hidden">Новая цена</span>25500 Р.</p>
+          </div>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
@@ -196,7 +202,9 @@
           <h3 class="product-title">
             <a href="#">Перфоратор BOSCH BFG 2000</a>
           </h3>
-          <p class="price-new">12500 Р.</p>
+          <div class="price">
+            <p class="price-new">12500 Р.</p>
+          </div>
           <div class="button-item">
             <button class="button-buy" type="submit">Купить</button>
             <button class="button-bookmark" type="submit">В закладки</button>
@@ -315,6 +323,7 @@
           ремонта и строительства не оставит равнодушными любителей сэкономить на
           гастарбайтерах.
         </p>
+        <br>
         <p>
           Мы можем доставить ваш товар в самые отдаленные точки России!<br>
           Техномарт работает со многими транспортными компаниями:
@@ -377,10 +386,13 @@
     <div class="footer-wrapper">
       <div class="container">
 
+
         <div class="footer-column">
           <div class="footer-copyright">
-            <p>© 2010–2019 Компания «Техномарт»</p>
-            <p>Все права защищены</p>
+            <p>
+              © 2010–2019 Компания «Техномарт»
+              Все права защищены
+            </p>
           </div>
 
           <ul class="social-list">
@@ -401,12 +413,10 @@
           </ul>
 
           <div class="communication">
-            <p>Обратная связь:
+            <p>Обратная связь:<br>
               <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </p>
-          </div>
-          <div>
-            <p>Разработано —
+            <p>Разработано —<br>
               <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </p>
           </div>
@@ -423,22 +433,28 @@
   </div>
 
   <div class="popup-feedback">
-    <form action="https://echo.htmlacademy.ru" method="post">
-      <label>
-        Ваше имя:
-        <input type="text" name="name" placeholder="Представьтесь, пожалуйста" required>
-      </label>
-      <label>
-        Ваш e-mail:
-        <input type="email" name="email" placeholder="Для отправки ответа" required>
-      </label>
-      <label>
-        Текст письма:
-        <textarea name="message" placeholder="В свободной форме" required></textarea>
-      </label>
-      <button type="submit">Отправить</button>
+    <form class="form-feedback" action="https://echo.htmlacademy.ru" method="post">
+      <p class="item-feedback">
+        <label for="name-feedback">Ваше имя:</label>
+        <input id="name-feedback" type="text" name="name" placeholder="Имя Фамилия" required>
+
+      </p>
+      <p class="item-feedback">
+        <label for="email-feedback">Ваш e-mail:</label>
+        <input id="email-feedback" type="email" name="email" placeholder="email@example.com" required>
+
+      </p>
+      <p class="item-feedback">
+        <label for="message-feedback">Текст письма:</label>
+        <textarea id="message-feedback" name="message" placeholder="В свободной форме" required></textarea>
+
+      </p>
+      <div class="popup-feedback-button">
+        <button class="button button-send" type="submit">Отправить</button>
+      </div>
     </form>
-    <button type="button">Закрыть форму обратной связи</button>
+    <button class="button-close" type="button"><span class="visually-hidden">Закрыть форму обратной
+        связи</span></button>
   </div>
 
 </body>
